--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-:root {
+﻿:root {
   --primary-color: #6366f1;
   --secondary-color: #8b5cf6;
   --success-color: #10b981;
@@ -12,7 +12,6 @@
   --shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
-
 body {
   margin: 0;
   background-color: var(--bg-color);
